Bug 166035 - DOTX templates do not show their preview thumbnail
Summary: DOTX templates do not show their preview thumbnail
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.2.7.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Template-Manager
  Show dependency treegraph
 
Reported: 2025-04-04 09:13 UTC by Timur
Modified: 2025-05-02 13:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-04-04 09:13:22 UTC
DOTX templates do not have preview thumbnail and that is this bug.
DOTX templates are mentioned in bug 115190 but focus there is on the name.
Still it has attachment 139321 [details] Screenshot of the template manager with an ott and a dotx template.
Comment 1 Justin L 2025-04-28 16:16:06 UTC
Microsoft formats may have a docProps/thumbnail.* image whose purpose is to be used as the thumbnail in file managers, etc.

ODF files has the same idea - with a "Thumbnails\thumbnail.png" image.

The templates browser currently only supports ODF files (with a Manifest.xml that indicates the presence of one of these thumbnails).

A proposed patch that supports generic thumbnails found in docProps is at https://gerrit.libreoffice.org/c/core/+/184722
Comment 2 Commit Notification 2025-04-29 02:22:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ba4c479d8f510cadf1c76bab5ced4b29745bc6b

tdf#166035 thumbnailview: recognize some MS-format thumbnails

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Justin L 2025-05-02 13:13:52 UTC
further improved by mk with https://gerrit.libreoffice.org/c/core/+/184750.