Refactor getting thumbnail a bit

This backport includes 7cad6f88cc6fdef91e7a71b9b4694559517c2e28
  tdf#166035 thumbnailview: recognize some MS-format thumbnails

Use OOXML package relations (and XRelationshipAccess) to access
OOXML's thumbnails.
Unify obtaining the bitmap.
This change also fixes a possible nullptr dereference when trying
to read the older Thumbnail/thumbnail.png - access to xDocStorage
wasn't checked before.

Change-Id: Iff9d85cb461960d2b11acaa008ba9ae69af475a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184750
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit b4965d0a7875384d1fedc7d43762c94b30e5e90f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184767
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184845
Reviewed-by: Justin Luth <jluth@mail.com>